tests/errors/iachar_arg_len_runtime.f90
program main
   character(5):: x = "Hello"
   print*, iachar(x)
end program
